[gd_scene load_steps=6 format=3 uid="uid://bebvc2datqp85"]

[ext_resource type="Script" uid="uid://fidys4f757e6" path="res://menu_overlay.gd" id="1_biga6"]
[ext_resource type="Theme" uid="uid://c8lf57q2f23tp" path="res://ui/menu_theme.tres" id="1_t3dyr"]
[ext_resource type="PackedScene" uid="uid://dsgvm3dda1kjp" path="res://ui/label_header.tscn" id="3_40ori"]
[ext_resource type="PackedScene" uid="uid://bgsxagi62acni" path="res://ui/setting_options.tscn" id="3_q4g74"]
[ext_resource type="PackedScene" uid="uid://bevoopcdq5dsh" path="res://ui/setting_vec2i.tscn" id="4_s6r0s"]

[node name="MenuElement" type="PanelContainer"]
custom_minimum_size = Vector2(400, 0)
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("1_t3dyr")
theme_type_variation = &"SubmenuPanelContainer"
script = ExtResource("1_biga6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="LabelTarget" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_40ori")]
unique_name_in_owner = true
layout_mode = 2
text = "OverlayAudioSpectrum"
top_spacing = false

[node name="Setting_Anchor" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_q4g74")]
unique_name_in_owner = true
layout_mode = 2
setting_type = 1
items = PackedStringArray("Top Left", "Top Right", "Bottom Left", "Bottom Right", "Center Left", "Center Top", "Center Right", "Center Bottom", "Center")
value = 0
setting_name = "Anchor"
setting_name_min_width = 50

[node name="Setting_Position" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_s6r0s")]
unique_name_in_owner = true
layout_mode = 2
min_value = Vector2i(-3000, -3000)
max_value = Vector2i(3000, 3000)
show_updown_arrows = true
prefix_min_width = 10
setting_name = "Position"
setting_name_min_width = 50

[node name="Setting_Size" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_s6r0s")]
unique_name_in_owner = true
layout_mode = 2
min_value = Vector2i(-3000, -3000)
max_value = Vector2i(3000, 3000)
show_updown_arrows = true
prefix_x = "w"
prefix_y = "h"
prefix_min_width = 10
setting_name = "Size"
setting_name_min_width = 50

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Anchor"

[node name="Option_Anchor" type="OptionButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Position"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "X"
horizontal_alignment = 1

[node name="Spin_PosX" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "Y"
horizontal_alignment = 1

[node name="Spin_PosY" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="Label3" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Size"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "W"
horizontal_alignment = 1

[node name="Spin_SizeW" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "H"
horizontal_alignment = 1

[node name="Spin_SizeH" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="ParamContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonFinish" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_type_variation = &"ButtonGreen"
text = "Finish"
